--- a/.github/workflows/build-standalone.yaml
+++ b/.github/workflows/build-standalone.yaml
@@ -17,6 +17,7 @@ jobs:
       - name: Configure conan
         run: |
           conan remote add eliza https://rkevin.jfrog.io/artifactory/api/conan/eliza;
+          conan remote add astrabit https://rkevin.jfrog.io/artifactory/api/conan/astrabit;
           conan remote add bincrafters https://bincrafters.jfrog.io/artifactory/api/conan/public-conan;
           conan config set general.revisions_enabled=1;
           setx CONAN_USE_ALWAYS_SHORT_PATHS 1;
@@ -62,6 +63,7 @@ jobs:
           pip3 install conan
           conan remote add eliza https://rkevin.jfrog.io/artifactory/api/conan/eliza;
           conan remote add bincrafters https://bincrafters.jfrog.io/artifactory/api/conan/public-conan;
+          conan remote add astrabit https://rkevin.jfrog.io/artifactory/api/conan/astrabit;
           conan config set general.revisions_enabled=1;
           mkdir ${{ runner.temp }}/build
       - name: Cache conan dependencies
